gccida/c0/output_805
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_805/src/insn-output.c:4710:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_805/src/insn-output.c:4715:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+14h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_805/src/insn-output.c:4741:18: error: use of undeclared identifier 'off_87B914'
output_asm_insn( off_87B914, operands); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_805/src/insn-output.c:4745:9: error: use of undeclared identifier 'arg0'
return &arg0; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_805/src/obj/insn-output.o] Error 1
